@@ -16,6 +16,7 @@ announcer-1.0 (not yet released) - branch 0.11 again
  * #8062: Database upgrade silently fails when no i18n is available
  * #8458: PrivateTicketsPlugin is incompatible with TracAnnouncer plugin
  * #8577: NameError: when trying to delete a ticket
+ * #8620: Small grammatical fix in the ticket_email_mimic.html email
  * #8677: "prefix" not defined when sending email
  * #9206: AttributeError: 'XmppPreferencePanel' has no 'xmpp_format_setting'
  * #9522: Announcer Plugin doesn't work
@@ -43,11 +44,13 @@ announcer-0.12 from '0.11' (13-Feb-10) |r7569| by Robert Corsaro
 announcer-0.11.1.9 from '1.0-a1' (26-Sep-2010) |r9147| - branch 0.11.2dev
  resolved issues
  * #8310: ticket notifications do not thread properly in mail clients
+ * #8620: Small grammatical fix in the ticket_email_mimic.html email
  * #9021: show correct default in prefs for ticket email format
 
 announcer-0.11.1 from '1.0-a1' (26-Sep-2010) |r9146| - branch 0.11.1
  resolved issues
  * #8310: ticket notifications do not thread properly in mail clients
+ * #8620: Small grammatical fix in the ticket_email_mimic.html email
  * #9021: show correct default in prefs for ticket email format
  * #9616: AnnouncementSystem fail on ticket change with set_message_id = false
 
